sessions/08-ingress-edge-routing/subsessions/06-ingress/01-message-board-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress
  namespace: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /api/apps
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
